tests/cases/ffi/errors/extern-void-param.ari
extern "C" fn bad(value: c_void);

fn main() -> i64 {
  return 0;
}
